--- a/examples/instagram.html
+++ b/examples/instagram.html
@@ -31,6 +31,9 @@
             text-shadow: 0px 0px 3px #fff;
             box-shadow: 3px 3px 5px 5px #888;
         }
+        .post > small {
+            background-color: rgba(255,255,255,0.3);
+        }
     </style>
 </head>
 <body>
