--- a/examples/instagram.html
+++ b/examples/instagram.html
@@ -73,6 +73,9 @@
     </style>
 </head>
 <body>
+    <a style="position: absolute;padding:5px;" href="https://github.com/fraigo/social-media-proxy">
+        <img src=https://fraigo.github.io/images/github.png width=40 >
+    </a>
     <div id="root">
     </div>
     <script src="https://social-plugin.herokuapp.com/instagram.js?user=instagram"></script>
