--- a/examples/instagram.html
+++ b/examples/instagram.html
@@ -78,7 +78,7 @@
     </a>
     <div id="root">
     </div>
-    <script src="https://social-plugin.herokuapp.com/instagram.js?user=instagram"></script>
+    <script src="/instagram.js?user=instagram"></script>
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
